--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -5,7 +5,6 @@ output:
     keep_md: true
 ---
 
-
 ## Loading and preprocessing the data
 ```{r, echo = TRUE}
 dt <- read.csv("activity.csv", header = T, stringsAsFactors = F, na.strings = "NA")
@@ -15,7 +14,7 @@ dt$date <- as.Date(dt$date, "%Y-%m-%d")
 
 
 ## What is mean total number of steps taken per day?
-1. Calculate total number of steps taken per day  
+1. Calculate total number of steps taken per day.  
 ```{r, echo = TRUE}
 tb <- tapply(dt$steps, dt$date, sum, na.rm = TRUE)
 tb <- as.data.frame(tb)
@@ -23,13 +22,13 @@ df <- data.frame(date=row.names(tb), steps=(tb$tb))
 df$date <- as.Date(df$date, "%Y-%m-%d")
 df
 ```
-2. Make a histogram of the total number of steps taken each day  
+2. Make a histogram of the total number of steps taken each day.  
 ```{r, echo =TRUE}
 df.freq <- as.Date(as.vector(rep(df$date, df$steps)),origin = "1900-01-01")
 hist(df.freq, breaks = 12, freq = T, main = "Histogram of Steps", ylab = "steps", xlab = "date")
 ```
 
-3. Calculate and report the mean and median of the total number of steps taken per day  
+3. Calculate and report the mean and median of the total number of steps taken per day.  
 ```{r, echo = TRUE}
 mn <- tapply(dt$steps, dt$date, mean, na.rm = T)
 mn <- as.data.frame(mn)
@@ -41,7 +40,7 @@ stpdata
 
 
 ## What is the average daily activity pattern?
-1. Make a time series plot of the 5-minute interval and the average number of steps taken, averaged across all days  
+1. Make a time series plot of the 5-minute interval and the average number of steps taken, averaged across all days.  
 ```{r, echo = TRUE}
 interval_ave <- tapply(dt$steps, dt$interval, mean, na.rm = T)
 plot(interval_ave, type = "l", main = "plot of steps by time interval", xlab = "time interval", ylab = "steps")
@@ -64,7 +63,7 @@ na_num <- sum(is.na(dt$steps))
 
 2. Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.  
 The missing values will be filled with the average interval value calculated in `interval_ave`.  
-3. Create a new dataset that is equal to the original dataset but with the missing data filled in  
+3. Create a new dataset that is equal to the original dataset but with the missing data filled in.  
 **Fill in the missing value:**  
 ```{r, echo = TRUE}
 dt1 <- dt
